desktop version align fix - aside footer

--- a/public/css/page-orphanages.css
+++ b/public/css/page-orphanages.css
@@ -161,8 +161,7 @@ aside footer {
     padding: 0;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-around; */
-    /* align-content: flex-end; */
+    align-items: start;
   }
   aside footer p {
     margin-top: 0.5rem;
